doc/1.0/_sources/examples/index.rst.txt
Examples
--------

These Python scripts illustrate the use of the FreeDiscovery REST and Python
APIs on a subset of the TREC 2009 legal collection. 

These examples can be run with the following steps,

  1. `Install <https://freediscovery.github.io/doc/dev/installation_instructions.html>`_ FreeDiscovery and start either the development server or the Docker container.
  2. Activate the virtual environment,
    .. code-block:: bash

       source activate freediscovery-env # without the "source" on Windows
    
  3. Run the examples, e.g. 
     
  .. code-block:: bash
  
     python examples/REST_categorization.py

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="A visual interpretation for the binary categorization outcome for a single document by looking ...">

.. only:: html

    .. figure:: /examples/images/thumb/sphx_glr_python_categorization_interpretation_thumb.png

        :ref:`sphx_glr_examples_python_categorization_interpretation.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/python_categorization_interpretation

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Thread a email collection ">

.. only:: html

    .. figure:: /examples/images/thumb/sphx_glr_REST_email_threading_thumb.png

        :ref:`sphx_glr_examples_REST_email_threading.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/REST_email_threading

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An example of Semantic Search ">

.. only:: html

    .. figure:: /examples/images/thumb/sphx_glr_REST_semantic_search_thumb.png

        :ref:`sphx_glr_examples_REST_semantic_search.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/REST_semantic_search

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An example illustrating the data ingestion in FreeDiscovery ">

.. only:: html

    .. figure:: /examples/images/thumb/sphx_glr_REST_data_ingestion_thumb.png

        :ref:`sphx_glr_examples_REST_data_ingestion.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/REST_data_ingestion

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Cluster documents into clusters ">

.. only:: html

    .. figure:: /examples/images/thumb/sphx_glr_REST_clustering_thumb.png

        :ref:`sphx_glr_examples_REST_clustering.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/REST_clustering

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Find near-duplicates in a text collection ">

.. only:: html

    .. figure:: /examples/images/thumb/sphx_glr_REST_duplicate_detection_thumb.png

        :ref:`sphx_glr_examples_REST_duplicate_detection.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/REST_duplicate_detection

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An example to illustrate binary categorizaiton with FreeDiscovery ">

.. only:: html

    .. figure:: /examples/images/thumb/sphx_glr_REST_categorization_thumb.png

        :ref:`sphx_glr_examples_REST_categorization.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/REST_categorization
.. raw:: html

    <div style='clear:both'></div>



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

    :download:`Download all examples in Python source code: examples_python.zip </examples/examples_python.zip>`



  .. container:: sphx-glr-download

    :download:`Download all examples in Jupyter notebooks: examples_jupyter.zip </examples/examples_jupyter.zip>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <http://sphinx-gallery.readthedocs.io>`_
